--- a/index_7.html
+++ b/index_7.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="CSS.css">
-    <title>Exersices#6</title>
+    <title>Exercise#6</title>
 </head>
 <body>
     <h1>CSS Articles-External CSS sheey !</h1>
